eks-statful/was/was-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: was
  namespace: back-end
spec:
  replicas: 3
  selector:
    matchLabels:
      app: django
  template:
    metadata:
      labels:
        app: django
    spec:
      containers:
      - name: was
        image : gymin97/django:django_v2
        imagePullPolicy: Always
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m" 
        ports:
        - containerPort: 8000
