eks-statful/was/was-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-svc
  namespace: back-end
spec:
  selector:
    app: django
  ports:
  - port: 8000
    targetPort: 8000
